# 2023-Panyushkin-TimeSeriesCourse

.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
practice/01 Basics/: 01 Basics.ipynb
practice/01 Basics/modules/: clustering.py  metrics.py  plots.py
practice/02 Similarity search/: 02 Similarity search.ipynb
practice/02 Similarity search/modules/: bestmatch.py  metrics.py  plots.py
practice/03 Discords/: 03 Discords.ipynb
practice/04 Matrix profile/modules/: mp.py  plots.py
practice/05 Snippets/: 05 Snippets.ipynb
practice/05 Snippets/modules/: snippets.py
practice/06 Chains/: 06 Chains.ipynb
practice/07 Imputation and Forecast/: 07 Imputation and Forecast.ipynb  CMakeLists.txt
